# FT201

./: .gitignore  .gitmodules  README.md  Review-1-Anikina.txt  Review-1-Belyaev.txt  Review-1-Kariakin.txt  Review-1-Zaets.txt  Review-2-Zaets.txt  Review3-Beklenishchev.txt  Review3-Kulemin.txt  Review3-Perezhogin.txt  Review3-Zaets.txt  Review3-Ziyatdinov.txt  Review4-Belyaev.txt  Review4-Cherentsov.txt  Review4-Hudyakov.txt  Review4-Kogut.txt  Review4-Kulemin.txt  Review4-Kuzvesova.txt  Review4-Mukoseev.txt
Allocator_Gmacem/: CMakeLists.txt  README.md
Allocator_Gmacem/asan/: CMakeCache.txt  Makefile  text.txt  word-counter
Allocator_Gmacem/asan/word_counter/: Makefile
Allocator_Gmacem/word_counter/: .main.cpp.swp  CMakeLists.txt  allocator.h  buf.cpp  main.cpp  parser.cpp  parser.h  reader.cpp  reader.h  text.txt
